# a-maze-ing

./: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze_config.py  maze_config_parser.py  maze_display.py  maze_display_1.py  maze_display_2.py  mazegen-1.0.0-py3-none-any.whl  output_maze.txt  pyproject.toml
.github/workflows/: lint.yml
Obsidian/: Work Strategy.md
Obsidian/.obsidian/: workspace.json
Obsidian/01_Rules/: Code_Quality.md.md  Makefile.md.md
Obsidian/02_Generation_Engine/: Algorithms.md.md  Maze_Constraints.md.md  Parsing_Config.md.md  Pattern_42.md.md
Obsidian/03_Output_File/: Hexadecimal_Encoding.md.md  Output_Format.md.md
Obsidian/04_Visual_Interface/: Rendering_Engine.md.md  User_Interactions.md.md
Obsidian/05_Packaging_Reusable/: README_Requirements.md.md  Reusable_Module_Packaging.md.md
display/: maze_display.py
mazegen/: maze_generate.py
src/mazegen/: README.md  __init__.py  maze_generate.py
src/mazegen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mazegen/config_parser/: __init__.py  maze_config.py  maze_config_parser.py  maze_config_parser_error.py
src/mazegen/display/: maze_display.py
src/parser/: maze_config.py  maze_config_parser.py
src/src_maze/: maze_generate.py
src_maze/: maze_generate.py
