[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "aluslu", email = "aluslu@student.42lyon.fr"},
    {name = "advacher", email ="advacher@student.42lyon.fr"}
]
# when make build, it install 
# what the module needs only 
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
# when make install it install EVERYTHING
dev = [
    "mypy==1.19.1",
    "flake8",
    "mlx"
]

[tool.setuptools]
# Where to find package
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"mazegen" = ["README.md", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
# include mazegen package and its sub-packages
include = ["mazegen*"]
# adds as packages and subpackages only 
# folders with '__init__.py' file
namespaces = false


[tool.mypy]
# mypy flags
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
# exclude these folders when executing mypy
exclude = ["\\.venv", "venv", "build", "dist"]

[tool.uv.sources]
# where to find mlx package
mlx = { path = "./lib/mlx-2.2-py3-none-any.whl" }
